Fixed all console errors, made style adjustments to Join Game screen and chatbox scrollbar. Also added a getPlayerName method to authFactory

--- a/client/app/test.css
+++ b/client/app/test.css
@@ -220,7 +220,7 @@ html, body {
     height:50%;
     float:right;
     border-top:none;
-    overflow: scroll;
+    overflow: auto;
     margin-bottom:10px;
     text-align:left;
 }
